# u-blox-sho-OpenCPU

./: README.md
BMD-300-EVAL/zephyr_evk_bsp/ubx_bmd300eval_nrf52832/: Kconfig  Kconfig.board  Kconfig.defconfig  ubx_bmd300eval_nrf52832.yaml  ubx_bmd300eval_nrf52832_defconfig
BMD-330-EVAL/zephyr_evk_bsp/ubx_bmd330eval_nrf52810/: Kconfig.board  Kconfig.defconfig
BMD-340-EVAL/zephyr_evk_bsp/ubx_bmd340eval_nrf52840/: ubx_bmd340eval_nrf52840.dts
BMD-345-EVAL/zephyr_evk_bsp/ubx_bmd345eval_nrf52840/: ubx_bmd345eval_nrf52840.yaml
BMD-360-EVAL/zephyr_evk_bsp/ubx_bmd360eval_nrf52811/: Kconfig  Kconfig.board  ubx_bmd360eval_nrf52811.dts  ubx_bmd360eval_nrf52811.yaml
IRIS-USB-EVK-start-up-software/: flash_config.c  rdrw612bga_hello_world.hex
MCUXpresso/: README.md
MCUXpresso/EVK-NINA-B50x/: README.md
MCUXpresso/IRIS-W1/: README.md
NINA-W1-OTP/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
NINA-W1-OTP/components/ubx_otp/: CMakeLists.txt  otp_is25lp.c  otp_mx25.c  otp_reader.c
NINA-W1-OTP/components/ubx_otp/include/: otp_defs.h  otp_is25lp.h  otp_mx25.h  otp_reader.h
NINA-W1-OTP/components/ubx_phy_cal/: CMakeLists.txt  ubx_phy_cal.c
NINA-W1-OTP/components/ubx_phy_cal/include/: ubx_phy_cal.h
NINA-W1-OTP/main/: CMakeLists.txt  Kconfig.projbuild  main.c
NINA-W1-OTP/patches/: ubx_phy_cal_esp_idf_4_0.patch  ubx_phy_cal_esp_idf_4_3.patch  ubx_phy_cal_esp_idf_4_4.patch  ubx_phy_cal_esp_idf_5_1.patch
NORA-W1-OutputPower/: CMakeLists.txt  README.md  sdkconfig.defaults
NORA-W1-OutputPower/main/: CMakeLists.txt  Kconfig.projbuild  main.c
NORA-W1-OutputPower/patches/: ubx_phy_cal_esp_idf_4_4.patch  ubx_phy_cal_esp_idf_5_1.patch
NORA-W30-OutputPower/: README.md  rtw_opt_rf_para_rtl8721d_W301.c  rtw_opt_rf_para_rtl8721d_W306.c  rtw_opt_rf_para_rtl8721d_uCX_cert_v2.c
NORA-W40-OutputPower/: CMakeLists.txt  README.md  sdkconfig.defaults
NORA-W40-OutputPower/main/: CMakeLists.txt  Kconfig.projbuild  main.c
NORA-W40-OutputPower/patches/: ubx_phy_cal_esp_idf_5_1.patch
zephyr/BMD-360_AOATAG/: CMakeLists.txt  README.md  prj.conf
zephyr/dfu_bootloaders/: README.md
(+417 files in other folders)
